feat(异常岗): 异常岗增加业务操作节点，操作纬度问题修正